Use Spring Webflux

--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,44 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.7.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'java'
-	id 'com.google.cloud.tools.jib' version '1.5.0'
+    id 'org.springframework.boot' version '2.1.7.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'java'
+    id 'com.google.cloud.tools.jib' version '1.5.0'
 }
 
 group = 'org.kleinb.example.kubedeployment'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_11
 
 configurations {
-	developmentOnly
-	runtimeClasspath {
-		extendsFrom developmentOnly
-	}
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
+
 ext {
-	lombokVersion = '1.18.8'
-	vavrVersion = '0.10.0'
+    lombokVersion = '1.18.8'
+    vavrVersion = '0.10.0'
 }
+
+springBoot {
+    buildInfo()
+}
+
 dependencies {
-	compileOnly "org.projectlombok:lombok:$lombokVersion"
-	annotationProcessor "org.projectlombok:lombok:$lombokVersion"
-	implementation "io.vavr:vavr:$vavrVersion"
-	implementation "io.vavr:vavr-jackson:$vavrVersion"
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-json'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
+    implementation "io.vavr:vavr:$vavrVersion"
+    implementation "io.vavr:vavr-jackson:$vavrVersion"
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-json'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 wrapper.gradleVersion = '5.6'
