--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -3,7 +3,12 @@ kind: Deployment
 metadata:
   name: spring-deployment
 spec:
-  replicas: 1
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: spring-boot-jib
@@ -19,6 +24,11 @@ spec:
           ports:
             - name: http
               containerPort: 8080
+          readinessProbe:
+            tcpSocket:
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
