--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ repositories {
 
 ext {
     lombokVersion = '1.18.8'
-    vavrVersion = '0.10.0'
 }
 
 springBoot {
@@ -32,8 +31,8 @@ springBoot {
 dependencies {
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
-    implementation "io.vavr:vavr:$vavrVersion"
-    implementation "io.vavr:vavr-jackson:$vavrVersion"
+    implementation 'io.vavr:vavr:0.10.1'
+    implementation 'io.vavr:vavr-jackson:0.10.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-json'
