--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: spring-boot-jib-pod
-          image: demo
+          image: backend
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
@@ -35,10 +35,10 @@ kind: Service
 metadata:
   name: spring-boot-jib-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 8080
-      nodePort: 32321
+      targetPort: 8080
   selector:
     app: spring-boot-jib
