--- a/subprojects/backend/backend.gradle
+++ b/subprojects/backend/backend.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'org.kleinb.example.kubedeployment'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_12
 
 configurations {
     developmentOnly
@@ -32,3 +32,5 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+jib.from.image = "adoptopenjdk:12-jre-hotspot"
