--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,7 +7,11 @@ build:
     - image: backend
       jibGradle:
         project: backend
+    - image: admin-server
+      jibGradle:
+        project: admin-server
 deploy:
   kubectl:
     manifests:
       - kubernetes/backend-deployment.yaml
+      - kubernetes/admin-server-deployment.yaml
