Rename demo to backend and adminserver application, package and application classes

--- a/subprojects/adminserver/adminserver.gradle
+++ b/subprojects/adminserver/adminserver.gradle
@@ -18,7 +18,7 @@ configurations {
 
 springBoot {
     buildInfo()
-    mainClassName = 'org.kleinb.example.kubedeployment.demo.DemoApplication'
+    mainClassName = 'org.kleinb.example.kubedeployment.adminserver.AdminserverApplication'
 }
 
 dependencies {
