--- a/kubernetes/adminserver-deployment.yaml
+++ b/kubernetes/adminserver-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: admin-server
+  name: adminserver
 spec:
   replicas: 1
   strategy:
@@ -11,15 +11,15 @@ spec:
       maxUnavailable: 0
   selector:
     matchLabels:
-      app: spring-admin-server
+      app: spring-adminserver
   template:
     metadata:
       labels:
-        app: spring-admin-server
+        app: spring-adminserver
     spec:
       containers:
-        - name: spring-admin-server-pod
-          image: admin-server
+        - name: spring-adminserver-pod
+          image: adminserver
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
@@ -33,7 +33,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring-admin-server-service
+  name: spring-adminserver-service
 spec:
   type: NodePort
   ports:
@@ -41,4 +41,4 @@ spec:
       port: 9090
       nodePort: 32323
   selector:
-    app: spring-admin-server
+    app: spring-adminserver
