--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,11 +7,11 @@ build:
     - image: backend
       jibGradle:
         project: backend
-    - image: admin-server
+    - image: adminserver
       jibGradle:
-        project: admin-server
+        project: adminserver
 deploy:
   kubectl:
     manifests:
       - kubernetes/backend-deployment.yaml
-      - kubernetes/admin-server-deployment.yaml
+      - kubernetes/adminserver-deployment.yaml
