--- a/subprojects/adminserver/adminserver.gradle
+++ b/subprojects/adminserver/adminserver.gradle
@@ -2,12 +2,13 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.1.7.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'com.gorylenko.gradle-git-properties' version '1.5.1'
     id 'com.google.cloud.tools.jib' version '1.5.1'
 }
 
 group = 'org.kleinb.example.kubedeployment'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_12
+sourceCompatibility = JavaVersion.VERSION_11
 
 configurations {
     developmentOnly
@@ -27,5 +28,3 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
-jib.from.image = "adoptopenjdk:12-jre-hotspot"
