Add some tags to admin client config

--- a/subprojects/backend/src/main/resources/application.properties
+++ b/subprojects/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.boot.admin.client.url=http://spring-adminserver-service.default.svc.cluster.local:9090
 spring.boot.admin.client.instance.name="backend"
+spring.boot.admin.client.instance.metadata.tags.environment=demo
+spring.boot.admin.client.instance.metadata.tags.tier=backend
 spring.boot.admin.client.instance.prefer-ip=true
 management.endpoints.web.exposure.include=*
