Use non root user in containers

--- a/subprojects/adminserver/adminserver.gradle
+++ b/subprojects/adminserver/adminserver.gradle
@@ -28,3 +28,5 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+jib.container.user="nonroot"
