--- a/subprojects/backend/backend.gradle
+++ b/subprojects/backend/backend.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.springframework.boot' version '2.1.7.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.gorylenko.gradle-git-properties' version '1.5.1'
-    id 'com.google.cloud.tools.jib' version '1.5.1'
+    id 'com.google.cloud.tools.jib' version '1.7.0'
 }
 
 group = 'org.kleinb.example.kubedeployment'
@@ -34,3 +34,5 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+jib.container.user="nonroot"
